--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "live-polling",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Live Polling App that allows speakers to poll audience members",
   "main": "app-server.js",
   "scripts": {
@@ -16,6 +16,8 @@
     "bootstrap": "^3.3.5",
     "express": "^4.13.3",
     "react": "^0.14.0",
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7",
     "webpack": "^1.12.2"
   },
   "devDependencies": {},
