--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "live-polling",
-  "version": "0.0.3",
+  "version": "0.0.6",
   "description": "Live Polling App that allows speakers to poll audience members",
   "main": "app-server.js",
   "scripts": {
@@ -15,7 +15,8 @@
     "babel-loader": "^5.3.2",
     "bootstrap": "^3.3.5",
     "express": "^4.13.3",
-    "react": "^0.14.0",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
     "webpack": "^1.12.2"
