--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "live-polling",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Live Polling App that allows speakers to poll audience members",
   "main": "app-server.js",
   "scripts": {
@@ -19,6 +19,7 @@
     "react-router": "^0.13.3",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
+    "underscore": "^1.8.3",
     "webpack": "^1.12.2"
   },
   "devDependencies": {},
