--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "live-polling",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "description": "Live Polling App that allows speakers to poll audience members",
   "main": "app-server.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "bootstrap": "^3.3.5",
     "express": "^4.13.3",
     "react": "^0.13.3",
+    "react-d3": "^0.3.1",
     "react-router": "^0.13.3",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
